# oaas

./: .claude.md  .env.example  .gitignore  CLAUDE.md  CUSTOM_OBFUSCATION_old.md  OBFUSCATION_COMPLETE.md  OBFUSCATION_RESEARCH.md  OLLVM_RESEARCH_old.md  README.md  chaos_optimal  demo_original  factorial_optimal  requirements-agno.txt  test_ultimate
analysis/: O3_focused_results.json  single_flag_test_results.json  test_exhaustive.json
compiler/: pyvenv.cfg
compiler/Scripts/: activate  activate.bat
docs/: EXHAUSTIVE_SEARCH_USAGE.md  FLAG_OPTIMIZATION_ALGORITHM.md
llvm-obfuscator-research/: README.md  requirements-agno.txt
llvm-obfuscator-research/docs/: implementation_plan.md  initial_research.md
llvm-obfuscator-research/scripts/: analyze_ir.py  auto_obfuscate.py  flag_optimizer.py  obfuscation_agent.py  test_pipeline.sh  visualize_results.py
llvm-obfuscator-research/src/: arithmetic.cpp  factorial_lookup.c
scripts/: __init__.py  decompilation_test.py  exhaustive_flag_optimizer.py  flag_optimizer.py  flags.py  get_top_flags.py  llvm_agent.py  obfuscation_agent.py  progressive_flag_optimizer.py  string_obfuscator.py  test_llvm_flags.py
sh/: measure_all_obfuscation_metrics.sh  test_comprehensive_flags.sh
src/: factorial_iterative.c  factorial_recursive.c  recursive_chaos.c
src/passes/: CMakeLists.txt  Makefile  SimpleObfuscator.cpp
targeted-obfuscator/: integrate_with_ollvm.sh  protect_functions.py  test_system.sh
targeted-obfuscator/analyzer/: __init__.py  critical_detector.py
targeted-obfuscator/config/: protection_config.yaml
(+26 files in other folders)
